# solar_sailors

./: .gitignore  Cargo.toml  README.md  android.sh  index-18e7a403fcb8c675.js  index-18e7a403fcb8c675_bg.wasm  index-1b9d78fd10f21f3.js  index-1b9d78fd10f21f3_bg.wasm  index-2f083870306820aa.js  index-2f083870306820aa_bg.wasm  index-3a5e02b540da2124.js  index-3a5e02b540da2124_bg.wasm  index-41eccd5fea51c23b.js  index-41eccd5fea51c23b_bg.wasm  index-42e37d31b87527a3.js  index-42e37d31b87527a3_bg.wasm  index-48737fd347bbaf66.js  index-48737fd347bbaf66_bg.wasm  index-5139002df32cc448.js  index-5139002df32cc448_bg.wasm  index-56865eb8cccafa7.js  index-56865eb8cccafa7_bg.wasm  index-594034b9ec8f8d1c.js  index-594034b9ec8f8d1c_bg.wasm  index-65d514cfbeef4b1b.js  index-65d514cfbeef4b1b_bg.wasm  index-6a23557fa14c880e.js  index-6a23557fa14c880e_bg.wasm  index-6badc62e19850644.js  index-6badc62e19850644_bg.wasm  index-70c7001b1fc78a61.js  index-70c7001b1fc78a61_bg.wasm  index-73e227f4c92f1572.js  index-73e227f4c92f1572_bg.wasm  index-7c325dd77df781f6.js  index-7c325dd77df781f6_bg.wasm  index-858210aada82e45e.js  index-858210aada82e45e_bg.wasm  index-8c08ba20d7accc10.js  index-8c08ba20d7accc10_bg.wasm  (+77 more)
.cargo/: config.toml
.github/workflows/: continous_integration.yml  continuous_deployment.yml  continuous_deployment_android.yml
assets/: Crab Sprite Sheet.credit  redCrab.credit
orbital/: Cargo.toml
orbital/examples/: solar_playground.rs
orbital/src/: lib.rs  orbits.rs
orbits/: Cargo.toml
orbits/examples/: solar_playground.rs
orbits/src/: lib.rs  orbits.rs
quad_indexed_db/: Cargo.toml  quad-indexed-db.js
quad_indexed_db/src/: lib.rs
src/: controlled.rs  datastructures.rs  main.rs  orbits.rs  photons.rs  physics.rs  player.rs  sail.rs  save.rs  ship.rs  stars.rs
src/save/: storage.rs
src/ship/: segment.rs
src/ship/attachements/: map.rs  sail.rs
src/ship/segments/: gauge.rs
