[package]
name = "solar_sailors"
version = "0.1.0"
authors = ["Oliver Scherer <github@oli-obk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex2d = {version = "1.1.0", default-features = false}
macroquad = {path = "../macroquad",  version = "0.3", default-features = false}
orbital = {path = "orbital", version = "0.1"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
quad_indexed_db = { path = "quad_indexed_db", version = "0.1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "3.0.2"
copy_dir = "0.1.2"

[profile.release]
opt-level = "s"
lto = true
