[package]
name = "solar_sailors"
version = "0.1.0"
authors = ["Oliver Scherer <github@oli-obk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex2d = {version = "1.1.0", default-features = false}
macroquad = {git = "https://github.com/not-fl3/macroquad.git", default-features = false}
orbital = {path = "orbital", version = "0.1"}
tracing = "0.1.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
quad-storage-sys = "0.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "4"
dircpy = "0.3"

[profile.release]
opt-level = "s"
lto = true
