[package]
name = "orbital"
version = "0.1.0"
authors = ["Oli Scherer <github35764891676564198441@oli-obk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
typed_floats = "1.0.6"

[dev-dependencies]

macroquad = { version = "0.4.14" }
